<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Administer_LogIn">

    <EditText
        android:id="@+id/editmm"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="mm"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/edityy"
        app:layout_constraintTop_toBottomOf="@+id/Welcome" />

    <EditText
        android:id="@+id/editdd"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="dd"
        android:inputType="number|textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/setfinsihdate"
        app:layout_constraintStart_toEndOf="@+id/editmm"
        app:layout_constraintTop_toBottomOf="@+id/Welcome" />

    <Button
        android:id="@+id/CandidateControl"
        android:layout_width="147dp"
        android:layout_height="72dp"
        android:layout_marginTop="50dp"
        android:text="Candidate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StudentControl" />

    <Button
        android:id="@+id/StudentControl"
        android:layout_width="147dp"
        android:layout_height="72dp"
        android:layout_marginTop="200dp"
        android:text="Student"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="237dp"
        android:layout_height="23dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/LogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CandidateControl" />

    <Button
        android:id="@+id/setfinsihdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="set"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Welcome" />

    <EditText
        android:id="@+id/edityy"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="yy"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Welcome" />

</androidx.constraintlayout.widget.ConstraintLayout>